--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="header">
   <div id="title"><a href="{{ site.url }}">Urouge &raquo;</a></div>
   <div id="misc">
-    <a href="http://github.io/urouge">Github</a> &middot;
+    <a href="http://github.com/urouge">Github</a> &middot;
     <a href="{{ site.url }}/feed.xml">Feed</a>
   </div>
 </div>
