--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,6 @@
   <div id="title"><a href="{{ site.url }}">Urouge &raquo;</a></div>
   <div id="misc">
     <a href="http://github.com/urouge">Github</a> &middot;
-    <a href="{{ site.url }}/feed.xml">Feed</a>
+    <a href="{{ site.url }}feed.xml">Feed</a>
   </div>
 </div>
