--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,4 +7,7 @@ layout: default
     <div class="strap">{{ page.date | date: "%b %d, %Y" }}</div>
     {{ content }}
   </div>
+  <div>
+  	{% include comments.md %}
+  </div>
 </div>
